# MEMU3

./: .gitignore  CMakeLists-draft.txt  CMakeLists.txt  MEMU3.APS  MEMU3.rc  MEMU3.sln  MEMU3.vcxproj  MEMU3.vcxproj.filters  README.md  README.txt  ellonut_squished.psd  resource.h  strength_map_1.psd
.github/: FUNDING.yml
Configs/: MEMU3.config  red+neon.colorset  red.colorset
Interception/: interception.h
SampleConfigs/: MEMU3.config
headers/: AimAssistant.h  Configuration.h  Coords.h  Defines.h  InputController.h  Manager.h  Overlay.h  Rect.h  ScreenshotData.h  ScreenshotFactory.h  TtlStringCollection.h  Utils.h
headers/debug/: debug_utils.h  scoped_time_meter.h  stb_image.h
headers/logging/: console_logger.h  logger.h  overlay_logger.h
headers/probe/: ProbeResult.h  ScreenshotProbe.h  ScreenshotProbeColorPattern.h  ScreenshotProbeHashTable.h  ScreenshotProbeHashTableBrute.h
maps/: ellonut_squished.psd
sources/: AimAssistant.cpp  Coords.cpp  InputController.cpp  Main.cpp  Manager.cpp  Overlay.cpp  Rect.cpp  ScreenshotData.cpp  ScreenshotFactory.cpp  TtlStringCollection.cpp  Utils.cpp
sources/debug/: debug_utils.cpp
sources/probe/: ScreenshotProbeColorPattern.cpp  ScreenshotProbeHashTable.cpp  ScreenshotProbeHashTableBrute.cpp
tests/: ScreenshotTest.cpp
